# weatherstation_data_analysis

./: .flake8  .gitignore  API_STATUS.md  CENTENNIAL_STATIONS_README.md  CHANGELOG.md  CHIRPS_Data_Access_Efforts.md  CLAUDE.md  GEMINI.md  IRAN_DROUGHT_README.md  LICENSE  README.md  Saekularstation_Potsdam_Telegraphenberg.ipynb  berlin_autumn_2024_infographic.py  berlin_autumn_decadal_analysis.py  germany_centennial_clean.py  germany_centennial_clean_2018.py  germany_centennial_climate_dwd.py  germany_centennial_cumulative_demo.py  germany_centennial_demo.py  germany_centennial_readable.py  germany_centennial_simple.py  germany_centennial_stations.py  hottest_temperature_plot.py  iran_drought_analysis.py  iran_hydrological_drought_analysis.py  iran_megadrought_analysis.py  iran_simple_precipitation_plot.py  potsdam_extreme_values.py  potsdam_forecast.py  potsdam_yearly_cycle.py  pyproject.toml  real_precipitation_plot.py  real_precipitation_plot_dwd.py  requirements-dev.txt  requirements.txt  scientific_paper_template.md  setup.py  test_german_stations.py  test_meteostat_api.py  test_wetterdienst_correct_api.py  (+2 more)
.github/workflows/: ci.yml  ci.yml.disabled  simple-ci.yml
plots/: berlin_autumn_2024_caption.txt  berlin_autumn_decadal_caption.txt
precipitation_forecasting/: .gitignore  CLUSTER_SETUP.md  README.md  requirements.txt  setup.py
precipitation_forecasting/config/: settings.yaml
precipitation_forecasting/data_pipeline/: data_preprocessor.py  era5_downloader.py
precipitation_forecasting/models/: baseline_models.py
src/: __init__.py
src/weatherstation_analysis/: __init__.py  advanced_drought_analyzer.py  advanced_drought_plotter.py  chirps_data_fetcher.py  chirps_fetcher.py  city_manager.py  data_fetcher.py  drought_analyzer.py  drought_plotter.py  era5_fetcher.py  extreme_analyzer.py  iran_data_fetcher.py  visualization.py  weather_fetcher.py
tests/: __init__.py  test_data_fetcher.py  test_extreme_analyzer.py  test_visualization.py
